# camp

./: README.md  pyproject.toml
example/: compute_metrics.py
scripts/: eval_camp.py  train_camp.py
scripts/configs/: config_camp.yaml  config_eval.yaml
src/camp/: __init__.py  _dtype.py  _version.py  settings.py  utils.py
src/camp/ase/: calculator.py
src/camp/data/: data.py  dataset.py  transform.py
src/camp/model/: atomic_moment.py  atomic_moment_rule.py  atomic_moment_rules.yaml  camp.py  hyper_moment.py  hyper_moment_rule.py  hyper_moment_rules.yaml  level.py  readout.py  utils.py  utils_jit.py
src/camp/nn/: embedding.py  linear.py  mlp.py
src/camp/training/: lit_model.py  utils.py
tests/: test_utils.py
tests/ase/: test_calculator.py
tests/data/: conftest.py  test_model_datapipe.py  test_transform.py
tests/model/: conftest.py  test_atomic_moment.py  test_atomic_moment_rule.py  test_camp.py  test_hyper_moment.py  test_hyper_moment_rule.py  test_radial.py  test_readout.py  test_scatter.py  test_utils.py
tests/nn/: test_embedding.py
